修复IE下主页加载失效的问题

--- a/PersonalPortal/PersonalPortal/Style/Css/HelloWorld.css
+++ b/PersonalPortal/PersonalPortal/Style/Css/HelloWorld.css
@@ -108,6 +108,10 @@
 
 .weather {
     color: black;
+    cursor: default;
+    -moz-user-select: none;
+    user-select: none;
+    -webkit-user-select: none;
 }
 
     .weather * {
