--- a/PersonalPortal/PersonalPortal/Views/HelloWorld.html
+++ b/PersonalPortal/PersonalPortal/Views/HelloWorld.html
@@ -184,19 +184,23 @@
             try {
                 $scope.city = remote_ip_info.city;
                 factory.Query('https://free-api.heweather.com/v5/weather?key=b8572b0c0502416996c8bbe7613233e9&city=' + remote_ip_info.city).then(function (data) {
-                    var weekday = ["周日", "周一", "周二", "周三", "周四", "周五", "周六"];
-                    var date = new Date();
-                    $scope.time = weekday[date.getDay()] + ' ' + (date.getMonth() + 1) + '月' + date.getDate() + '日';
+                    try {
+                        var weekday = ["周日", "周一", "周二", "周三", "周四", "周五", "周六"];
+                        var date = new Date();
+                        $scope.time = weekday[date.getDay()] + ' ' + (date.getMonth() + 1) + '月' + date.getDate() + '日';
 
-                    data = data.HeWeather5[0];
-                    var now = data.now;
-                    var today = data.daily_forecast[0];
-                    var number = /[0-9]/g;
-                    $scope.currentTemp = now.tmp;
-                    $scope.wind = now.wind.dir + ' ' + now.wind.sc + (number.test(now.wind.sc) ? '级' : '');
-                    $scope.weather = now.cond.txt;
-                    $scope.weatherIcon = '/Images/weather/' + now.cond.code + '.png';
-                    $scope.temperature = today.tmp.min + '~' + today.tmp.max + '℃';
+                        data = data.HeWeather5[0];
+                        var now = data.now;
+                        var today = data.daily_forecast[0];
+                        var number = /[0-9]/g;
+                        $scope.currentTemp = now.tmp;
+                        $scope.wind = now.wind.dir + ' ' + now.wind.sc + (number.test(now.wind.sc) ? '级' : '');
+                        $scope.weather = now.cond.txt;
+                        $scope.weatherIcon = '/Images/weather/' + now.cond.code + '.png';
+                        $scope.temperature = today.tmp.min + '~' + today.tmp.max + '℃';
+                    } catch (e) {
+                        $('.weather').css('visibility', 'hidden');
+                    }
                 });
             } catch (e) {
                 $('.weather').css('visibility', 'hidden');
