--- a/PersonalPortal/PersonalPortal/Views/HelloWorld.html
+++ b/PersonalPortal/PersonalPortal/Views/HelloWorld.html
@@ -101,8 +101,7 @@
                 { "Name": "Developer", "Url": "http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers" },
                 { "Name": "js-beautify", "Url": "https://github.com/beautify-web/js-beautify" },
                 { "Name": "CodeMirror", "Url": "https://github.com/codemirror/codemirror" },
-                { "Name": "particles.js", "Url": "https://github.com/VincentGarreau/particles.js" },
-                { "Name": "RequireJS", "Url": "https://github.com/requirejs/requirejs" },
+                { "Name": "particles.js", "Url": "https://github.com/VincentGarreau/particles.js" }
             ];
 
             $scope.GetShortCut = function (refresh) {
