--- a/PersonalPortal/PersonalPortal/Style/Css/Index.css
+++ b/PersonalPortal/PersonalPortal/Style/Css/Index.css
@@ -80,7 +80,6 @@ iframe {
 .Switch {
     display: table;
     float: right;
-    padding: 7px 15px;
+    margin: 7px 0;
     position: relative;
-    left: 20px;
 }
